--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "hubot": "^2.18.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.6",
+    "hubot-redis-brain": "0.0.3",
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.1.3",
     "hubot-heroku-keepalive": "^1.0.2",
